--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -41,6 +41,7 @@ jobs:
           docker pull akshayme/io-ioiq:1.0.314
           docker pull akshayme/io-workflowengine:1.0.2107
           docker run --name io-iq -p 9090:9090 -e spring.datasource.url=${{secrets.POSTGRES_SERVER}} akshayme/io-ioiq:1.0.314 &
+          docker run --name io-iq -p 9090:9090 -e spring.datasource.url=${{secrets.POSTGRES_SERVER}} -e spring.datasource.username=${{secrets.POSTGRES_USERNAME}} -e spring.datasource.password=${{secrets.POSTGRES_PASSWORD}} akshayme/io-ioiq:1.0.314 &
           docker run --name io-workflowengine -p 9091:9091 akshayme/io-workflowengine:1.0.2107 &
       
       - name: Check IO Server Status
