--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -42,7 +42,7 @@ jobs:
       
       - name: Check IO Server Status
         run: | 
-          sleep 45
+          sleep 60
           curl http://localhost:9090/actuator/health
           curl http://localhost:9091/actuator/health
       
@@ -52,7 +52,7 @@ jobs:
         with:
           additionalWorkflowArgs: --persona=developer --release.type=major 
                     --polaris.url=${{secrets.ORG_POLARIS_SERVER_URL}} --polaris.token=${{secrets.ORG_POLARIS_ACCESS_TOKEN}} 
-                    --sensitive.package.pattern='.*(\\+\\+\\+.*(com\\/example\\/app)).*'
+                    --sensitive.package.pattern='.*(\\+\\+\\+.*(com\\/example\\/security)).*'
           stage: "IO"
       
       # Please note that the ID in previous step was set to prescription
@@ -75,50 +75,11 @@ jobs:
         with:
           args: '--blackduck.url="${{ secrets.ORG_BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.ORG_BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR"'
       
-      # # Runs a single command using the runners shell
-      # - name: Black Duck Scanner
-      # # You may pin to the exact commit or the version.
-      # # uses: philips-labs/blackduck-scanner-action@74c7f93e4e4c217cabae4c604270646c755dab1f
-      #   uses: philips-labs/blackduck-scanner-action@v1
-      #   with:
-      #     # Blackduck project name
-      #     projectName: 
-      #     # Blackduck project version prefix
-      #     versionPrefix: 
-      #     # Blackduck url
-      #     url: 
-      #     # Blackduck token
-      #     token: 
-      #     # sourcePath
-      #     sourcePath: 
-      #     # Extra arguments that will be passed to the detector
-      #     extraArgs: # optional
-
-      # - name: Synopsys Intelligent Security Scan
-      # # You may pin to the exact commit or the version.
-      # # uses: synopsys-sig/intelligent-security-scan@48eedfcd42bc342a294dc495ac452797b2d9ff08
-      #   uses: synopsys-sig/intelligent-security-scan@v1
-      #   with:
-      #     # The server Host URL for Intelligent Scan Engine eg http://localhost:1111 or https://21b7.ngrok.io
-      #     ioServerUrl: # default is http://localhost:9090
-      #     # The server password for Intelligent Scan Engine
-      #     ioServerToken: # optional, default is 
-      #     # HTTP URL to download IO Manifest file synopsys-io.yml
-      #     ioManifestUrl: # optional
-      #     # The server Host URL for Intelligent Scan Workflow Engine eg http://localhost:1111 or https://21b7.ngrok.io
-      #     workflowServerUrl: # default is http://localhost:9091
-      #     # The workflow jar version to retrieve for Intelligent Scan Engine
-      #     workflowVersion: # optional, default is 2021.01
-      #     # Additional arguments required for workflow engine arguments
-      #     additionalWorkflowArgs: 
-      #     # Additional arguments required for workflow engine arguments
-      #     stage: # default is IO
-      
       - name: Synopsys Intelligent Security Scan
         if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
         uses: synopsys-sig/intelligent-security-scan@v1.0.3
         with:
-          additionalWorkflowArgs: --slack.channel.id=C015LGE7RRQ --slack.token=${{secrets.ORG_SLACK_TOKEN}} 
+          additionalWorkflowArgs: --slack.channel.id=${{secrets.ORG_SLACK_CHANNEL_ID}} --slack.token=${{secrets.ORG_SLACK_TOKEN}} 
                   --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} 
                   --polaris.project.name=sig-devsecops/github-io-sample --polaris.url=${{secrets.ORG_POLARIS_SERVER_URL}} --polaris.token=${{secrets.ORG_POLARIS_ACCESS_TOKEN}} 
                   --blackduck.project.name=github-io-sample:1.0.0 --blackduck.url=${{secrets.ORG_BLACKDUCK_URL}} --blackduck.api.token=${{secrets.ORG_BLACKDUCK_TOKEN}}
