--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -91,7 +91,7 @@ jobs:
         if: ${{steps.prescription.outputs.scaScan == 'true' }}
         uses: blackducksoftware/github-action@v2
         with:
-          args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR"'
+          args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="ephemeral-io-demo" --detect.project.version.name="1.0.0"'
       
       - name: Synopsys Intelligent Security Scan
         if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
