--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -99,8 +99,8 @@ jobs:
         with:
           additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} 
                   --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} 
-                  --polaris.project.name=sig-devsecops/github-io-sample --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
-                  --blackduck.project.name=github-io-sample:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
+                  --polaris.project.name=sig-devsecops/ephemeral-io-demo --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
+                  --blackduck.project.name=ephemeral-io-demo:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
                   --jira.project.name=DEM --jira.assignee=${{secrets.JIRA_ASSIGNEE}} --jira.api.url=${{secrets.JIRA_SERVER_URL}}
                   --jira.username=${{secrets.JIRA_USERNAME}} --jira.auth.token=${{secrets.JIRA_AUTH_TOKEN}}
           stage: "WORKFLOW"
