--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -60,7 +60,7 @@ jobs:
       
       - name: Check IO Server Status
         run: | 
-          sleep 60
+          sleep 45
           curl http://localhost:9090/actuator/health
           curl http://localhost:9091/actuator/health
       
@@ -91,7 +91,7 @@ jobs:
 #         if: ${{steps.prescription.outputs.scaScan == 'true' }}
 #         uses: blackducksoftware/github-action@v2
 #         with:
-#           args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="ephemeral-io-demo" --detect.project.version.name="1.0.0"'
+#           args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="github-io-sample" --detect.project.version.name="1.0.0"'
       
       - name: Synopsys Intelligent Security Scan
         if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
@@ -99,8 +99,8 @@ jobs:
         with:
           additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} 
                   --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} 
-                  --polaris.project.name=sig-devsecops/ephemeral-io-demo --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
-                  --blackduck.project.name=ephemeral-io-demo:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
+                  --polaris.project.name=sig-devsecops/github-io-sample --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
+                  --blackduck.project.name=github-io-sample:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
                   --jira.project.name=DEM --jira.assignee=${{secrets.JIRA_ASSIGNEE}} --jira.api.url=${{secrets.JIRA_SERVER_URL}}
                   --jira.username=${{secrets.JIRA_USERNAME}} --jira.auth.token=${{secrets.JIRA_AUTH_TOKEN}}
           stage: "WORKFLOW"
