--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -101,9 +101,11 @@ jobs:
                   --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} 
                   --polaris.project.name=sig-devsecops/github-io-sample --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
                   --blackduck.project.name=github-io-sample:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
-                  --jira.project.name=DEM --jira.assignee=${{secrets.JIRA_ASSIGNEE}} --jira.api.url=${{secrets.JIRA_SERVER_URL}}
+                  --jira.project.name=DEM  --jira.api.url=${{secrets.JIRA_SERVER_URL}}
                   --jira.username=${{secrets.JIRA_USERNAME}} --jira.auth.token=${{secrets.JIRA_AUTH_TOKEN}}
           stage: "WORKFLOW"
+          
+#           --jira.assignee=${{secrets.JIRA_ASSIGNEE}}
       
       - name: Upload SARIF file
         if: ${{steps.prescription.outputs.sastScan == 'true' }}
