--- a/.github/workflows/synopsys.yml
+++ b/.github/workflows/synopsys.yml
@@ -76,22 +76,22 @@ jobs:
       # Please note that the ID in previous step was set to prescription
       # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
       # is defined in settings
-#       - name: Static Analysis with Polaris
-#         if: ${{steps.prescription.outputs.sastScan == 'true' }}
-#         run: |
-#             export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
-#             export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
-#             wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
-#             unzip -j polaris_cli-linux64.zip -d /tmp
-#             /tmp/polaris analyze -w
+      - name: Static Analysis with Polaris
+        if: ${{steps.prescription.outputs.sastScan == 'true' }}
+        run: |
+            export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
+            export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
+            wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+            unzip -j polaris_cli-linux64.zip -d /tmp
+            /tmp/polaris analyze -w
       
       # Please note that the ID in previous step was set to prescription
       # in order for this logic to work
-#       - name: Software Composition Analysis with Black Duck
-#         if: ${{steps.prescription.outputs.scaScan == 'true' }}
-#         uses: blackducksoftware/github-action@v2
-#         with:
-#           args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="github-io-sample" --detect.project.version.name="1.0.0"'
+      - name: Software Composition Analysis with Black Duck
+        if: ${{steps.prescription.outputs.scaScan == 'true' }}
+        uses: blackducksoftware/github-action@v2
+        with:
+          args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="github-io-sample" --detect.project.version.name="1.0.0"'
       
       - name: Synopsys Intelligent Security Scan
         if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
@@ -101,11 +101,9 @@ jobs:
                   --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} 
                   --polaris.project.name=sig-devsecops/github-io-sample --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
                   --blackduck.project.name=github-io-sample:1.0.0 --blackduck.url=${{secrets.BLACKDUCK_URL}} --blackduck.api.token=${{secrets.BLACKDUCK_TOKEN}}
-                  --jira.project.name=DEM  --jira.api.url=${{secrets.JIRA_SERVER_URL}}
+                  --jira.project.name=TES --jira.api.url=${{secrets.JIRA_SERVER_URL}}
                   --jira.username=${{secrets.JIRA_USERNAME}} --jira.auth.token=${{secrets.JIRA_AUTH_TOKEN}}
           stage: "WORKFLOW"
-          
-#           --jira.assignee=${{secrets.JIRA_ASSIGNEE}}
       
       - name: Upload SARIF file
         if: ${{steps.prescription.outputs.sastScan == 'true' }}
